<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.1.0</version>
  <description>The RxROS teleop package</description>

  <maintainer email="wasowski@itu.dk">Andrzej Wasowski</maintainer>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="henrik7264@outlook.com">Henrik Larsen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rxros</depend>
  <depend>std_msgs</depend>
  <depend>teleop_msgs</depend>
</package>
